RESOLVED FIXED180999
Standardize terminology for marked text
https://bugs.webkit.org/show_bug.cgi?id=180999
Summary Standardize terminology for marked text
Daniel Bates
Reported 2017-12-19 14:17:05 PST
Standardize terminology for marked text.
Attachments
Patch (79.73 KB, patch)
2017-12-19 14:21 PST, Daniel Bates
no flags
Patch (79.83 KB, patch)
2017-12-19 14:41 PST, Daniel Bates
no flags
Patch (87.49 KB, patch)
2018-02-23 16:59 PST, Daniel Bates
no flags
Patch (87.56 KB, patch)
2018-02-23 17:03 PST, Daniel Bates
zalan: review+
Archive of layout-test-results from ews206 for win-future (11.54 MB, application/zip)
2018-02-23 18:59 PST, EWS Watchlist
no flags
Daniel Bates
Comment 1 2017-12-19 14:21:32 PST
Daniel Bates
Comment 2 2017-12-19 14:41:57 PST
Daniel Bates
Comment 3 2018-02-23 16:59:01 PST
EWS Watchlist
Comment 4 2018-02-23 17:01:48 PST
Attachment 334554 [details] did not pass style-queue: ERROR: Source/WebCore/rendering/MarkedText.cpp:92: More than one command on the same line [whitespace/newline] [4] ERROR: Source/WebCore/rendering/InlineTextBox.cpp:565: More than one command on the same line [whitespace/newline] [4] Total errors found: 2 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
Daniel Bates
Comment 5 2018-02-23 17:03:02 PST
EWS Watchlist
Comment 6 2018-02-23 17:04:59 PST
Attachment 334555 [details] did not pass style-queue: ERROR: Source/WebCore/rendering/MarkedText.cpp:92: More than one command on the same line [whitespace/newline] [4] ERROR: Source/WebCore/rendering/InlineTextBox.cpp:565: More than one command on the same line [whitespace/newline] [4] Total errors found: 2 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
EWS Watchlist
Comment 7 2018-02-23 18:58:59 PST
Comment on attachment 334555 [details] Patch Attachment 334555 [details] did not pass win-ews (win): Output: http://webkit-queues.webkit.org/results/6648038 New failing tests: http/wpt/resource-timing/rt-initiatorType-media.html
EWS Watchlist
Comment 8 2018-02-23 18:59:10 PST
Created attachment 334560 [details] Archive of layout-test-results from ews206 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews206 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Daniel Bates
Comment 9 2018-02-26 12:00:07 PST
(In reply to Build Bot from comment #7) > Comment on attachment 334555 [details] > Patch > > Attachment 334555 [details] did not pass win-ews (win): > Output: http://webkit-queues.webkit.org/results/6648038 > > New failing tests: > http/wpt/resource-timing/rt-initiatorType-media.html I am unclear how this test failure could be caused by this rename patch.
Daniel Bates
Comment 10 2018-02-27 14:35:57 PST
Radar WebKit Bug Importer
Comment 11 2018-02-27 14:37:09 PST
Note You need to log in before you can comment on or make changes to this bug.